# BackendManutencao

./: README.md  db.sqlite3  limpar.py  modelagem.py  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  apps.py  signals.py
core/migrations/: 0001_initial.py  0002_alter_clientes_cpf.py  0003_clientes_cep_clientes_cidade_clientes_email.py  0003_servicos.py  0004_merge_20240718_0026.py  0005_pecas.py  0006_entradas.py  0007_saidas.py  0008_alter_clientes_options_alter_entradas_options_and_more.py  0009_remove_orcamentos_pecas_remove_orcamentos_servicos_and_more.py  0010_orcamentos_status.py  0011_remove_orcamentospecas_nome_peca_and_more.py  0012_remove_orcamentospecas_orcamento_and_more.py  0013_orcamento_desconto_orcamento_mao_de_obra_and_more.py  0014_alter_clientes_email.py
core/models/: __init__.py  clientes.py  entradas.py  orcamentos.py  pecas.py  saidas.py  servicos.py
core/serializers/: __init__.py  clientes.py  entradas.py  orcamentos.py  pecas.py  saidas.py  servicos.py
core/templates/relatorios/: relatorio_orcamentos.html
core/views/: __init__.py  clientes.py  entradas.py  orcamentos.py  pecas.py  saidas.py  servicos.py
core/views/relatorios/: orcamentos.py  router.py  urls.py
